--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,7 +3,7 @@
     height: 100px;
     position: fixed;
     top: 0;
-    background-color: #ab2a19; 
+    background-color:blue; 
     z-index: 2;
   }
   .Header > img {
